impl update PUT, PATCH and swagger docs change
