# docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/song/create": {
             "post": {
-                "description": "Creating",
+                "description": "Creating song with song name and group name",
                 "consumes": [
                     "application/json"
                 ],
@@ -70,6 +70,12 @@
                 "summary": "get list songs with filters",
                 "parameters": [
                     {
+                        "type": "boolean",
+                        "description": "With deleted",
+                        "name": "d",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "name": "group_name",
                         "in": "query"
@@ -110,13 +116,7 @@
                         "in": "query"
                     },
                     {
-                        "type": "boolean",
-                        "description": "Page",
-                        "name": "d",
-                        "in": "query"
-                    },
-                    {
-                        "description": "Filters",
+                        "description": "Filters json body",
                         "name": "filters",
                         "in": "body",
                         "schema": {
@@ -142,13 +142,19 @@
                         "schema": {
                             "$ref": "#/definitions/entity.ErrorResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ErrorResponse"
+                        }
                     }
                 }
             }
         },
         "/song/{song_id}": {
             "put": {
-                "description": "Put song",
+                "description": "Put song change all fields",
                 "consumes": [
                     "application/json"
                 ],
@@ -166,13 +172,22 @@
                         "name": "song_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Song with changing fields",
+                        "name": "song",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.Song"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/entity.Song"
                         }
                     },
                     "400": {
@@ -190,7 +205,7 @@
                 }
             },
             "delete": {
-                "description": "Deleting song",
+                "description": "Deleting song if soft delete true then deleted_at in BD change on NOW() or if soft is false then delete row from bd",
                 "consumes": [
                     "application/json"
                 ],
@@ -235,7 +250,7 @@
                 }
             },
             "patch": {
-                "description": "Patch song",
+                "description": "Patch song change any fields",
                 "consumes": [
                     "application/json"
                 ],
@@ -253,13 +268,22 @@
                         "name": "song_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Song with changing fields",
+                        "name": "song",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.Song"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/entity.Song"
                         }
                     },
                     "400": {
